CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(vulny)

IF( NOT CMAKE_BUILD_TYPE )
     SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_INSTALL_PREFIX "/usr")

SET(PACKAGE_MAJOR_VERSION 0)
SET(PACKAGE_MINOR_VERSION 1)
SET(PACKAGE_PATCH_VERSION 0)

FILE(GLOB GAME "src/Game.*" )
FILE(GLOB SOCKET_SERVER "src/SocketServer.*" )

# Executables
ADD_EXECUTABLE(vulny src/vulny.cpp ${GAME} ${SOCKET_SERVER})
INSTALL(TARGETS vulny RUNTIME DESTINATION bin)
TARGET_LINK_LIBRARIES(vulny pthread)

SET(CPACK_PACKAGE_NAME "vulny")
SET(CPACK_PACKAGE_CONTACT "Sean LaPlante <laplante.sean@gmail.com>")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Vulnerable socket for educational purposes")
SET(CPACK_PACKAGE_VERSION_MAJOR "${PACKAGE_MAJOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_MINOR "${PACKAGE_MINOR_VERSION}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PACKAGE_PATCH_VERSION}")
SET(CPACK_GENERATOR "DEB")

SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libboost-dev" )
SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Sean LaPlante <laplante.sean@gmail.com>")
SET(CPACK_DEBIAN_PACKAGE_SECTION "utils")
SET(CPACK_DEBIAN_PACKAGE_PRIORITY "extra")
SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "")
SET(CPACK_DEBIAN_PACKAGE_SUGGESTS "")

INCLUDE(CPack)